fix: decrease `game-layout` padding on mobile

--- a/ui/src/assets/style/layout.css
+++ b/ui/src/assets/style/layout.css
@@ -25,5 +25,5 @@
 }
 
 .game-layout {
-  @apply flex size-full overflow-x-hidden overflow-y-auto p-4;
+  @apply flex size-full overflow-x-hidden overflow-y-auto p-1 sm:p-2 md:p-4;
 }
